examples/datalog/14_aggregations/79_sum_with_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sum_filter
Knowledge graph 'test_sum_filter' created.
Switched to knowledge graph: test_sum_filter
> .kg use test_sum_filter
Switched to knowledge graph: test_sum_filter
> +sales[(1, "East", 100), (2, "West", 200), (3, "East", 150), (4, "West", 50)].
Inserted 4 fact(s) into 'sales'.
> +east_total(<SUM:Amount>) :- sales(_, "East", Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
